# slasher

./: .gitignore  README.md
bag2hdf5/: bag2hdf5.py  smooth_steering.py
legacy/bag2hdf5/: README.md
model/: LeNet.ipynb  corl_data_analysis.py  export_foyer.py  hdf5_exporter.py  keras_try.py  monstruck_drive_model.py  monstruck_drive_model_integrate_throttle.py  resnet_model.py  resnet_model_inference.py  resnet_model_small.py  resnet_model_small_new.py  summary_data.py
model/.ipynb_checkpoints/: LeNet-checkpoint.ipynb
model/configs/: monstruck_drive_model_exp.json  monstruck_drive_model_small_exp.json  resnet_model_small_aps_test_exp.json  (+4 more)
monstruck_ws/: README.md
pretrained_models/: monstruck_drive_moddel_exp-163-0.06-exported.h5  monstruck_drive_moddel_exp-163-0.06-exported.json  resnet_model_small_new_aps_swipe_flip_exp-134-0.02-exported.h5  resnet_model_small_new_aps_swipe_flip_exp-134-0.02-exported.json
src/controller/: CMakeLists.txt  Pilot.py  activate.py  package.xml
src/controller/cfg/: config_car_uri.sh  config_host_uri.sh  monstruck_camera_config.yaml  param_server.yaml
src/controller/launch/: bagreplay-auto.launch  bagreplay.launch  calibration_car.launch  calibration_crazyfile_host.launch  calibration_host.launch  manual.launch  recording.launch
src/controller/src/: controller.py  joystick_node.cpp
tools/: 99-crazyflie.rules  car_setup.sh  compare_steering.py  dvs_cf_udev_install.sh  hdf5_exporter.py  hdf5_test.py  hdf_binder.py  hdf_splitter.py  host_setup.sh  keras_to_tf.py  rosbag_bind_driver_test.py  rosbag_exporter.py
(+57 files in other folders)
