<?xml version="1.0"?>
<package>
  <name>controller</name>
  <version>0.0.0</version>
  <description>Activate autonomous/manual mode</description>
  <maintainer email="duguyue100@gmail.com">Yuhuang Hu</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rally_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>rally_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>

   <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
